# zero2prod

./: Cargo.toml  Dockerfile  configuration.yml  spec.yml
.github/workflows/: general.yml
.sqlx/: query-0cae1e6ab7f1bb5604ecb91f141bf65b57a60a23d74a6dda68d854595eb9c2b2.json  query-0f2beda9fde724752734e1125546175a1a47b45bcaf234d4bbc72ecaf7eeb3d6.json  query-58403d4f21a712594958a62e538a880784c8421ee7929dc86c6f2e78f42ceca8.json  query-f36e1a22d3a5808252b97981a6f62064fbc9ccc9d314ec8273935e770682e08c.json
configuration/: base.yml
migrations/: 20241007052918_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
