[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
config = "0.14.0"
env_logger = "0.11.5"
once_cell = "1.19.0"
rand = "0.8.5"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.208", features = ["derive"] }
serde-aux = "4.5.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.11"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "registry",
] }
unicode-segmentation = "1.11.0"
uuid = { version = "1.10.0", features = ["v4"] }
validator = "0.16"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
serde_json = "1"
rand = { version = "0.8.5", features = ["std_rng"] }
claims = "0.7.1"
fake = "2.9.2"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
wiremock = "0.6"
linkify = "0.10.0"

[dependencies.reqwest]
version = "0.12.7"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "chrono",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
]
